@@ -639,6 +639,7 @@ All (GUI):
 - Add wxEVT_GRID_COL_AUTO_SIZE event (Igor Korot).
 - Add chainable wxWizardPageSimple::Chain() overload.
 - Add wxTextEntryDialog::SetMaxLength() (derEine).
+- Fix maximum width support in wxGridCellTextEditor (derEine).
 - Add more convenient wxFont(wxFontInfo) ctor.
 
 wxGTK:
